<?xml version="1.0"?>
<package>
  <name>micros_hopfield</name> 
  <version>0.0.2</version>
  <description>A package for path planning</description>

  <maintainer email="13975167889@163.com">Dengqing Tang</maintainer>
  <author>Xiaojia Xiang</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>