<?xml version="1.0"?>
<package>
  <name>micros_hopfield</name> 
  <version>0.0.2</version>
  <description>A package for path planning</description>

  <maintainer email="t.j.hu@nudt.edu.cn">Tianjiang Hu</maintainer>
  <author>Xiaojia Xiang</author>
  
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
